design(first-phase-result-input): fix not visible mat-elevation

--- a/apps/frontend/src/app/pages/transport-problem/+first-phase-result-input/first-phase-result-input.style.scss
+++ b/apps/frontend/src/app/pages/transport-problem/+first-phase-result-input/first-phase-result-input.style.scss
@@ -5,5 +5,6 @@
 
   .table-wrapper {
     overflow-x: auto;
+    padding: 8px;
   }
 }
